Replace calls to `Arrays.asList` with too few arguments.
Signed-off-by: currantw <taylor.curran@improving.com>