@@ -296,7 +296,7 @@ public class MatcherUtils {
 
       @Override
       public void describeTo(Description description) {
-        description.appendText(String.join(",", Arrays.asList().toString()));
+        description.appendText(String.join(",", List.of().toString()));
       }
 
       private boolean valuesAreClose(Number v1, Number v2) {
