@@ -17,6 +17,7 @@ import static org.opensearch.sql.protocol.response.format.JsonResponseFormatter.
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import java.util.Arrays;
+import java.util.List;
 import org.junit.jupiter.api.Test;
 import org.opensearch.sql.data.model.ExprTupleValue;
 import org.opensearch.sql.executor.ExecutionEngine;
@@ -120,7 +121,7 @@ class SimpleJsonResponseFormatterTest {
     QueryResult response =
         new QueryResult(
             schema,
-            Arrays.asList(
+            List.of(
                 tupleValue(
                     ImmutableMap.of(
                         "name",
@@ -143,7 +144,7 @@ class SimpleJsonResponseFormatterTest {
     QueryResult response =
         new QueryResult(
             schema,
-            Arrays.asList(
+            List.of(
                 tupleValue(
                     ImmutableMap.of(
                         "name",
